--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "visualizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://blkgoose.github.io/coronavisual",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
