feat(auto-build): Added pull force

--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -27,7 +27,7 @@ jobs:
         git commit -m "chore(update): $TIME" -a || true
 
     - name: Sync repo
-      run: git pull --ff-only
+      run: git pull --ff-only || true
 
     - name: Push changes
       uses: ad-m/github-push-action@master
